Fix broken publishing scripts

--- a/gradle.properties
+++ b/gradle.properties
@@ -48,12 +48,16 @@ MCFORGE_VERSION_RANGE=[48.0.0,49.0.0)
 FABRIC_LOADER_VERSION=0.14.22
 FABRIC_API_VERSION=0.89.0
 # FABRIC_API_MINECRAFT_VERSION=1.20.2
+FABRIC_MODRINTH_SLUG=fabric-api
+FABRIC_CURSEFORGE_SLUG=fabric-api
 
 # ApexCore
 APEXCORE_ID=apexcore
 APEXCORE_VERSION=12.0.0
 APEXCORE_DEV_VERSION=12.0.36
 APEXCORE_VERSION_RANGE=[12.0.0,13.0.0)
+APEXCORE_MODRINTH_SLUG=apexcore
+APEXCORE_CURSEFORGE_SLUG=apexcore
 
 # Dependencies
 DEVLOGIN_VERSION=0.1.0.2
