--- a/projects/platforms/mcforge/build.gradle
+++ b/projects/platforms/mcforge/build.gradle
@@ -29,20 +29,28 @@ publishMods {
     type = me.modmuss50.mpp.ReleaseType.of("${MOD_RELEASE_TYPE}")
     maxRetries = 5
     version = "${MOD_FULL_VERSION}"
-    displayName = "[MinecraftForge] ${MOD_NAME} - ${MOD_FULL_VERSION}+${MINECRAFT_VERSION}"
+    displayName = "[MinecraftForge] ${MOD_NAME} - Base - ${MOD_FULL_VERSION}+${MINECRAFT_VERSION}"
     modLoaders.add('forge')
     additionalFiles.from(jar.archiveFile, sourcesJar.archiveFile)
     dryRun = !providers.environmentVariable('MODRINTH_TOKEN').isPresent() || !providers.environmentVariable('CURSEFORGE_TOKEN').isPresent()
 
-    curseforge {
+    curseforge('curseforgeMinecraftForgeBase') {
         projectId = "${MOD_CURSEFORGE_ID}"
         accessToken = providers.environmentVariable('CURSEFORGE_TOKEN').getOrNull()
         minecraftVersions.add("${MINECRAFT_VERSION}")
+
+        embeds {
+            slug = "${APEXCORE_CURSEFORGE_SLUG}"
+        }
     }
 
-    modrinth {
+    modrinth('modrinthMinecraftForgeBase') {
         projectId = "${MOD_MODRINTH_ID}"
         accessToken = providers.environmentVariable('MODRINTH_TOKEN').getOrNull()
         minecraftVersions.add("${MINECRAFT_VERSION}")
+
+        embeds {
+            slug = "${APEXCORE_CURSEFORGE_SLUG}"
+        }
     }
 }
