--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 	id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1'
 
 	id 'com.palantir.git-version' version '1.0.0' apply false
-	id 'me.modmuss50.mod-publish-plugin' version '0.3.3' apply false
+	id 'me.modmuss50.mod-publish-plugin' version '0.3.+' apply false
 	id 'net.neoforged.gradleutils' version '2.+' apply false
 }
 
