Mark mod for public release

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,16 +6,16 @@ fabric.loom.multiProjectOptimisation=true
 # Mod
 MOD_NAME=FantasyFurniture
 MOD_ID=fantasyfurniture
-MOD_VERSION=10.0
+MOD_VERSION=10.1
 MOD_VERSION_TAG=v9.0
 MOD_RELEASE_TYPE=ALPHA
 MOD_DESCRIPTION=Adds Fantasy-Themed Furniture & Decorational blocks to the game
 MOD_LICENSE=GNU General Public License v3.0
 MOD_GROUP=xyz.apex.minecraft.fantasyfurniture
-MOD_MODRINTH_ID=EjjiYArZ
-MOD_MODRINTH_SLUG=dummy-project
-MOD_CURSEFORGE_ID=835372
-MOD_CUSRSEFORGE_SLUG=apexstudios-dummy-project
+MOD_MODRINTH_ID=A0nfCqYw
+MOD_MODRINTH_SLUG=fantasy-furniture
+MOD_CURSEFORGE_ID=579564
+MOD_CUSRSEFORGE_SLUG=fantasys-furniture
 MOD_COLOR=0x97C6E7
 
 # Common
@@ -53,9 +53,9 @@ FABRIC_CURSEFORGE_SLUG=fabric-api
 
 # ApexCore
 APEXCORE_ID=apexcore
-APEXCORE_VERSION=12.0.0
-APEXCORE_DEV_VERSION=12.0.36
-APEXCORE_VERSION_RANGE=[12.0.0,13.0.0)
+APEXCORE_VERSION=12.1.0
+# APEXCORE_DEV_VERSION=12.1.0
+APEXCORE_VERSION_RANGE=[12.1.0,13.0.0)
 APEXCORE_MODRINTH_SLUG=apexcore
 APEXCORE_CURSEFORGE_SLUG=apexcore
 
