--- a/scripts/mcforge.gradle
+++ b/scripts/mcforge.gradle
@@ -2,8 +2,6 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'org.spongepowered.mixin'
 
-jarJar.enable()
-
 minecraft {
     if(rootProject.hasProperty('PARCHMENT_MAPPINGS')) {
         if(rootProject.hasProperty('PARCHMENT_DEV_MINECRAFT_VERSION')) {
@@ -80,16 +78,8 @@ dependencies {
 
     if(rootProject.hasProperty('APEXCORE_DEV_VERSION')) {
         implementation fg.deobf("xyz.apex.minecraft.apexcore:apexcore-mcforge:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}")
-
-        jarJar("xyz.apex.minecraft.apexcore:apexcore-mcforge:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}") {
-            jarJar.ranged(it, "${APEXCORE_VERSION_RANGE}")
-        }
     } else {
         implementation fg.deobf("xyz.apex.minecraft.apexcore:apexcore-mcforge:${APEXCORE_VERSION}+${MINECRAFT_VERSION}")
-
-        jarJar("xyz.apex.minecraft.apexcore:apexcore-mcforge:${APEXCORE_VERSION}+${MINECRAFT_VERSION}") {
-            jarJar.ranged(it, "${APEXCORE_VERSION_RANGE}")
-        }
     }
 
     if(rootProject.hasProperty('DEVLOGIN_VERSION')) {
@@ -97,27 +87,32 @@ dependencies {
     }
 }
 
-tasks.jarJar.configure {
-    archiveClassifier.set('')
-}
-
-jar {
-    archiveClassifier.set('slim')
-}
-
-artifacts {
-    archives tasks.jarJar
-}
-
-reobf {
-    jarJar { }
-}
-
 jar.finalizedBy('reobfJar')
-tasks.jarJar.finalizedBy('reobfJarJar')
 
-collectJars {
-    def tasks = [ jar, sourcesJar, tasks.jarJar ]
-    dependsOn tasks
-    from tasks
+afterEvaluate {
+    if(tasks.jarJar.enabled) {
+        tasks.jarJar.configure {
+            archiveClassifier.set('')
+        }
+
+        jar {
+            archiveClassifier.set('slim')
+        }
+
+        artifacts {
+            archives tasks.jarJar
+        }
+
+        reobf {
+            jarJar { }
+        }
+
+        tasks.jarJar.finalizedBy('reobfJarJar')
+    }
+
+    collectJars {
+        def tasks = tasks.jarJar.enabled ? [ jar, sourcesJar, tasks.jarJar ] : [ jar, sourcesJar ]
+        dependsOn tasks
+        from tasks
+    }
 }
