Fix mixin related errors and crashes Fix MixinFurnaceResultSlot not being injected

--- a/projects/platforms/mcforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/projects/platforms/mcforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,6 +13,7 @@ public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_15498
 public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_58313_ # SLOTS_FOR_UP
 public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_58314_ # SLOTS_FOR_DOWN
 public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_58315_ # SLOTS_FOR_SIDES
+public net.minecraft.world.entity.ai.goal.DoorInteractGoal f_25191_ # hasDoor
 
 ########################
 # Copied from ApexCore #
