Fix jarJar not including obfuscated jars
Add required line to ensure reobfJarJar runs at correct time

--- a/scripts/mcforge.gradle
+++ b/scripts/mcforge.gradle
@@ -94,6 +94,7 @@ afterEvaluate {
         tasks.jarJar.configure {
             archiveClassifier.set('')
             finalizedBy 'reobfJarJar'
+            mustRunAfter 'reobfJar'
         }
 
         jar {
