--- a/projects/complete/mcforge/build.gradle
+++ b/projects/complete/mcforge/build.gradle
@@ -88,51 +88,53 @@ publishing {
     }
 }
 
-publishMods {
-    evaluationDependsOn(':mcforge')
+afterEvaluate {
+    publishMods {
+        evaluationDependsOn(':mcforge')
 
-    def jarFiles = [
-            project(':mcforge').tasks.jar.archiveFile, project(':mcforge').tasks.sourcesJar.archiveFile,
-            jar.archiveFile, tasks.sourcesJar.archiveFile
-    ]
-
-    children.forEach { child ->
-        evaluationDependsOn(":${child}-mcforge")
-
-        jarFiles += [
-                project(":${child}-mcforge").tasks.jar.archiveFile,
-                project(":${child}-mcforge").tasks.jarJar.archiveFile,
-                project(":${child}-mcforge").tasks.sourcesJar.archiveFile
+        def jarFiles = [
+                project(':mcforge').tasks.jar.archiveFile, project(':mcforge').tasks.sourcesJar.archiveFile,
+                jar.archiveFile, tasks.sourcesJar.archiveFile
         ]
-    }
 
-    file = tasks.jarJar.archiveFile
-    changelog = rootProject.file('changelogs/changelog.md').exists() ? rootProject.file('changelogs/changelog.md').getText('UTF-8') : ''
-    type = me.modmuss50.mpp.ReleaseType.of("${MOD_RELEASE_TYPE}")
-    maxRetries = 5
-    version = "${MOD_FULL_VERSION}"
-    displayName = "[MinecraftForge] ${MOD_NAME} - ${MOD_FULL_VERSION}+${MINECRAFT_VERSION}"
-    modLoaders.add('forge')
-    additionalFiles.from(jarFiles)
-    dryRun = !providers.environmentVariable('MODRINTH_TOKEN').isPresent() || !providers.environmentVariable('CURSEFORGE_TOKEN').isPresent()
+        children.forEach { child ->
+            evaluationDependsOn(":${child}-mcforge")
 
-    curseforge {
-        projectId = "${MOD_CURSEFORGE_ID}"
-        accessToken = providers.environmentVariable('CURSEFORGE_TOKEN').getOrNull()
-        minecraftVersions.add("${MINECRAFT_VERSION}")
-
-        requires {
-            slug = "${APEXCORE_CURSEFORGE_SLUG}"
+            jarFiles += [
+                    project(":${child}-mcforge").tasks.jar.archiveFile,
+                    project(":${child}-mcforge").tasks.jarJar.archiveFile,
+                    project(":${child}-mcforge").tasks.sourcesJar.archiveFile
+            ]
         }
-    }
 
-    modrinth {
-        projectId = "${MOD_MODRINTH_ID}"
-        accessToken = providers.environmentVariable('MODRINTH_TOKEN').getOrNull()
-        minecraftVersions.add("${MINECRAFT_VERSION}")
+        file = tasks.jarJar.archiveFile
+        changelog = rootProject.file('changelogs/changelog.md').exists() ? rootProject.file('changelogs/changelog.md').getText('UTF-8') : ''
+        type = me.modmuss50.mpp.ReleaseType.of("${MOD_RELEASE_TYPE}")
+        maxRetries = 5
+        version = "${MOD_FULL_VERSION}"
+        displayName = "[MinecraftForge] ${MOD_NAME} - ${MOD_FULL_VERSION}+${MINECRAFT_VERSION}"
+        modLoaders.add('forge')
+        additionalFiles.from(jarFiles)
+        dryRun = !providers.environmentVariable('MODRINTH_TOKEN').isPresent() || !providers.environmentVariable('CURSEFORGE_TOKEN').isPresent()
 
-        requires {
-            slug = "${APEXCORE_CURSEFORGE_SLUG}"
+        curseforge {
+            projectId = "${MOD_CURSEFORGE_ID}"
+            accessToken = providers.environmentVariable('CURSEFORGE_TOKEN').getOrNull()
+            minecraftVersions.add("${MINECRAFT_VERSION}")
+
+            requires {
+                slug = "${APEXCORE_CURSEFORGE_SLUG}"
+            }
+        }
+
+        modrinth {
+            projectId = "${MOD_MODRINTH_ID}"
+            accessToken = providers.environmentVariable('MODRINTH_TOKEN').getOrNull()
+            minecraftVersions.add("${MINECRAFT_VERSION}")
+
+            requires {
+                slug = "${APEXCORE_CURSEFORGE_SLUG}"
+            }
         }
     }
 }
