--- a/projects/complete/common/build.gradle
+++ b/projects/complete/common/build.gradle
@@ -1,21 +1,9 @@
 apply from: rootProject.file('scripts/common.gradle')
 
-def children = [ ]
-
-rootProject.childProjects.values().forEach { child ->
-    if(!child.path.startsWithIgnoreCase(':complete') && child.path.endsWithIgnoreCase('-common')) {
-        def moduleName = child.path.substring(1, child.path.indexOf('-'))
-
-        if(!children.contains(moduleName)) {
-            children.add(moduleName)
-        }
-    }
-}
-
 dependencies {
     compileOnly project(path: ':common', configuration: 'namedElements')
 
-    children.forEach { child ->
-        compileOnly project(path: ":${child}-common", configuration: 'namedElements')
+    if(findProject(':nordic-common') != null) {
+        compileOnly project(path: ':nordic-common', configuration: 'namedElements')
     }
 }
