--- a/projects/complete/mcforge/build.gradle
+++ b/projects/complete/mcforge/build.gradle
@@ -1,17 +1,4 @@
 apply from: rootProject.file('scripts/mcforge.gradle')
-apply plugin: 'me.modmuss50.mod-publish-plugin'
-
-def children = [ ]
-
-rootProject.childProjects.values().forEach { child ->
-    if(!child.path.startsWithIgnoreCase(':complete') && (child.path.endsWithIgnoreCase('-common') || child.path.endsWithIgnoreCase('-mcforge'))) {
-        def moduleName = child.path.substring(1, child.path.indexOf('-'))
-
-        if(!children.contains(moduleName)) {
-            children.add(moduleName)
-        }
-    }
-}
 
 minecraft {
     runs {
@@ -21,9 +8,9 @@ minecraft {
                     source sourceSets.main
                 }
 
-                children.forEach { child ->
-                    "${MOD_ID}_${child}" {
-                        source project(":${child}-mcforge").sourceSets.main
+                if(findProject(':nordic-mcforge') != null) {
+                    "${MOD_ID}_nordic" {
+                        source project(':nordic-mcforge').sourceSets.main
                     }
                 }
             }
@@ -57,9 +44,9 @@ dependencies {
         jarJar.ranged(it, "[${MOD_FULL_VERSION},)")
     }
 
-    children.forEach { child ->
-        implementation project(":${child}-mcforge")
-        jarJar(project(":${child}-mcforge")) {
+    if(findProject(':nordic-mcforge') != null) {
+        implementation project(':nordic-mcforge')
+        jarJar(project(':nordic-mcforge')) {
             transitive = false
             jarJar.ranged(it, "[${MOD_FULL_VERSION},)")
         }
@@ -78,63 +65,36 @@ sourcesJar {
     from project(':complete-common').sourceSets.main.allJava
 }
 
+tasks.jarJar.configure {
+    archiveClassifier.set('')
+}
+
+jar {
+    archiveClassifier.set('slim')
+}
+
+artifacts {
+    archives tasks.jarJar
+}
+
+reobf {
+    jarJar { }
+}
+
+tasks.jarJar.finalizedBy('reobfJarJar')
+
+collectJars {
+    def tasks = [ jar, sourcesJar, tasks.jarJar ]
+    dependsOn tasks
+    from tasks
+}
+
 publishing {
     publications {
         release(MavenPublication) {
             artifact jar
             artifact sourcesJar
             artifact tasks.jarJar
-        }
-    }
-}
-
-afterEvaluate {
-    publishMods {
-        evaluationDependsOn(':mcforge')
-
-        def jarFiles = [
-                project(':mcforge').tasks.jar.archiveFile, project(':mcforge').tasks.sourcesJar.archiveFile,
-                jar.archiveFile, tasks.sourcesJar.archiveFile
-        ]
-
-        children.forEach { child ->
-            evaluationDependsOn(":${child}-mcforge")
-
-            jarFiles += [
-                    project(":${child}-mcforge").tasks.jar.archiveFile,
-                    project(":${child}-mcforge").tasks.jarJar.archiveFile,
-                    project(":${child}-mcforge").tasks.sourcesJar.archiveFile
-            ]
-        }
-
-        file = tasks.jarJar.archiveFile
-        changelog = rootProject.file('changelogs/changelog.md').exists() ? rootProject.file('changelogs/changelog.md').getText('UTF-8') : ''
-        type = me.modmuss50.mpp.ReleaseType.of("${MOD_RELEASE_TYPE}")
-        maxRetries = 5
-        version = "${MOD_FULL_VERSION}"
-        displayName = "[MinecraftForge] ${MOD_NAME} - ${MOD_FULL_VERSION}+${MINECRAFT_VERSION}"
-        modLoaders.add('forge')
-        additionalFiles.from(jarFiles)
-        dryRun = !providers.environmentVariable('MODRINTH_TOKEN').isPresent() || !providers.environmentVariable('CURSEFORGE_TOKEN').isPresent()
-
-        curseforge {
-            projectId = "${MOD_CURSEFORGE_ID}"
-            accessToken = providers.environmentVariable('CURSEFORGE_TOKEN').getOrNull()
-            minecraftVersions.add("${MINECRAFT_VERSION}")
-
-            requires {
-                slug = "${APEXCORE_CURSEFORGE_SLUG}"
-            }
-        }
-
-        modrinth {
-            projectId = "${MOD_MODRINTH_ID}"
-            accessToken = providers.environmentVariable('MODRINTH_TOKEN').getOrNull()
-            minecraftVersions.add("${MINECRAFT_VERSION}")
-
-            requires {
-                slug = "${APEXCORE_CURSEFORGE_SLUG}"
-            }
         }
     }
 }
