Add JEI and REI support for Furniture Station

--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ MCFORGE_VERSION_RANGE=[48.0.0,49.0.0)
 
 # Fabric
 FABRIC_LOADER_VERSION=0.14.22
-FABRIC_API_VERSION=0.89.0
+FABRIC_API_VERSION=0.89.1
 # FABRIC_API_MINECRAFT_VERSION=1.20.2
 FABRIC_MODRINTH_SLUG=fabric-api
 FABRIC_CURSEFORGE_SLUG=fabric-api
@@ -58,6 +58,19 @@ APEXCORE_VERSION=12.1.0
 APEXCORE_VERSION_RANGE=[12.1.0,13.0.0)
 APEXCORE_MODRINTH_SLUG=apexcore
 APEXCORE_CURSEFORGE_SLUG=apexcore
+
+# jei,rei,emi
+RECIPE_PROV_TYPE=rei
+
+# JustEnoughItems
+JEI_ID=jei
+JEI_VERSION=16.0.0.28
+JEI_VERSION_RANGE=[16.0.0.0,17.0.0.0)
+
+# RoughlyEnoughItems
+REI_ID=rei
+REI_VERSION=13.0.666
+REI_VERSION_RANGE=[13.0.0.0,14.0.0.0)
 
 # Dependencies
 DEVLOGIN_VERSION=0.1.0.2
