--- a/projects/platforms/mcforge/src/main/resources/META-INF/mods.toml
+++ b/projects/platforms/mcforge/src/main/resources/META-INF/mods.toml
@@ -36,3 +36,15 @@ issueTrackerURL="https://discord.apexstudios.dev/"
 	versionRange="${APEXCORE_VERSION_RANGE}"
 	ordering="AFTER"
 	side="BOTH"
+[[dependencies."${MOD_ID}"]]
+	modId="${JEI_ID}"
+	mandatory=false
+	versionRange="${JEI_VERSION_RANGE}"
+	ordering="AFTER"
+	side="BOTH"
+[[dependencies."${MOD_ID}"]]
+	modId="${REI_ID}"
+	mandatory=false
+	versionRange="${REI_VERSION_RANGE}"
+	ordering="AFTER"
+	side="BOTH"
