--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,27 @@ subprojects {
 				includeGroup 'maven.modrinth'
 			}
 		}
+
+		maven {
+			url 'https://maven.blamejared.com/'
+			content {
+				includeGroup 'mezz.jei'
+			}
+		}
+
+		maven {
+			url 'https://maven.architectury.dev/'
+			content {
+				includeGroup 'dev.architectury'
+			}
+		}
+
+		maven {
+			url 'https://maven.shedaniel.me/'
+			content {
+				includeGroupByRegex 'me\\.shedaniel.*'
+			}
+		}
 	}
 
 	dependencies {
