--- a/projects/complete/mcforge/src/main/resources/META-INF/mods.toml
+++ b/projects/complete/mcforge/src/main/resources/META-INF/mods.toml
@@ -42,3 +42,15 @@ issueTrackerURL="https://discord.apexstudios.dev/"
 	versionRange="${MOD_VERSION}"
 	ordering="AFTER"
 	side="BOTH"
+[[dependencies."${MOD_ID}_complete"]]
+	modId="${JEI_ID}"
+	mandatory=false
+	versionRange="${JEI_VERSION_RANGE}"
+	ordering="AFTER"
+	side="BOTH"
+[[dependencies."${MOD_ID}_complete"]]
+	modId="${REI_ID}"
+	mandatory=false
+	versionRange="${REI_VERSION_RANGE}"
+	ordering="AFTER"
+	side="BOTH"
