Change to not include rei/jei at runtime by default

--- a/gradle.properties
+++ b/gradle.properties
@@ -60,7 +60,7 @@ APEXCORE_MODRINTH_SLUG=apexcore
 APEXCORE_CURSEFORGE_SLUG=apexcore
 
 # jei,rei,emi
-RECIPE_PROV_TYPE=rei
+RECIPE_PROV_TYPE=none
 
 # JustEnoughItems
 JEI_ID=jei
